Fix slash menu having dark text in dark mode

--- a/roam-research-dark.css
+++ b/roam-research-dark.css
@@ -409,10 +409,6 @@ button,
 	color: #fff !important;
 }
 
-.bp3-elevation-3 > .dont-unfocus-block .bp3-text-overflow-ellipsis {
-	color: black !important;
-}
-
 .bp3-input {
 	background: #222;
 }
